--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jade": "^1.11.0",
     "lodash": "^4.17.4",
     "needle": "^1.6.0",
+    "pretty-ms": "^3.0.0",
     "rolling-rate-limiter": "^0.1.10"
   },
   "devDependencies": {
